--- a/sass/components/form.scss
+++ b/sass/components/form.scss
@@ -20,7 +20,7 @@
     transition: all 0.3s;
 
     @include respond($phone) {
-      width: 75%;
+      width: 100%;
       padding: 0.5rem 1rem;
     }
 
@@ -102,7 +102,7 @@
     }
 
     &::after {
-      content: "";
+      content: '';
       display: block;
       height: 1.3rem;
       width: 1.3rem;
